# Nobody-Plays-Chess

./: .gitignore  Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  CMakeLists.txt  Move.cpp  Move.h  Movements Notes  NobodyPlaysChess.pro  README.md  Square.cpp  Square.h  chess.pro  chessTypes.h  listMovesSAN.txt  main.cpp
pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
